--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -38,10 +38,10 @@ body {
 
   #site-logo {
     max-height: 25px;
-    padding: 3px 6px;
-    background: #f8fafc;
-    border-radius: 4px;
-    box-shadow: 0 1px 2px rgb(0 0 0 / 0.1);
+    padding: #{dark-light-choose(0, 3px 6px)};
+    background: #{dark-light-choose(transparent, #f8fafc)};
+    border-radius: #{dark-light-choose(0, 4px)};
+    box-shadow: #{dark-light-choose(none, 0 1px 2px rgb(0 0 0 / 0.1))};
   }
 
   .d-header-icons .d-icon {
